[gd_scene load_steps=6 format=2]

[ext_resource path="res://events/EventZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://events/chapter3/MongolCaptureEvent.gd" type="Script" id=2]
[ext_resource path="res://characters/chapter3/MongolAnimationLeader.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/chapter3/MongolAnimation.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.001

[node name="MongolCaptureEvent" instance=ExtResource( 1 )]
script = ExtResource( 2 )
DIALOGUE = "res://dialogues/chapter_3/event_mongol_capture.txt"

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 118 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
anims/RESET = SubResource( 1 )

[node name="MongolAnimationLeader" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( -201, 0 )
facing = 3

[node name="MongolAnimation1" parent="." index="3" instance=ExtResource( 4 )]
position = Vector2( -185, 0 )
facing = 3

[node name="MongolAnimation2" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( -169, 0 )
facing = 3

[node name="MongolAnimation3" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( -153, 0 )

[node name="MongolAnimation4" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( -137, 0 )
facing = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
